--- a/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
+++ b/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 🎯팀관리 - 전술적으로 정의되지 않은 팀을 다시 세우기
+title: 👥팀관리 - 전술적으로 정의되지 않은 팀을 다시 세우기
 categories: team
 tag: [TEAM]
 toc: true
