--- a/_posts/team/2025-04-06-팀관리_전략적조직변화.md
+++ b/_posts/team/2025-04-06-팀관리_전략적조직변화.md
@@ -82,5 +82,11 @@ toc: true
 하지만 이런 방식은 시스템 수가 늘어나거나 담당자가 변경될 때마다 인수인계와 구조 파악에 혼선이 생기고, 유지보수 품질도 들쭉날쭉해질 수밖에 없었다.
 
 ## 조직이 근본적으로 변할수 있는 전략이 필요했다
+단기적인 문제 해결을 넘어서, 우리 조직이 장기적으로 경쟁력을 유지하고 지속적으로 성장하기 위해서는 
+**조직 문화와 업무 방식을 근본적으로 재정의하는 전략**을 세우고 이를 위한 전술을 세웠다.
 
+### 도메인 중심 조직 재편
 
+### 팀원들과의 공감대 형성
+
+### 힘있는 조직을 만들기
