--- a/_posts/team/2025-04-06-팀관리_전략적조직변화.md
+++ b/_posts/team/2025-04-06-팀관리_전략적조직변화.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 👥팀관리 - 전략적 조직변화
+title: 👥 팀관리 - 전략적 조직변화
 categories: team
 tag: [TEAM]
 toc: true
@@ -78,15 +78,20 @@ toc: true
 
 이 인원으로 20개가 넘는 시스템을 효율적으로 운영하고 개선해야 했다.
 
-이전까지는 개발자 각각이 1~2개의 시스템을 나눠 맡는 구조였다.
-하지만 이런 방식은 시스템 수가 늘어나거나 담당자가 변경될 때마다 인수인계와 구조 파악에 혼선이 생기고, 유지보수 품질도 들쭉날쭉해질 수밖에 없었다.
+이전까지는 개발자 각각이 1~2개의 시스템을 나눠 맡는 구조였다. 연차가 있으면 중요도가 높은 시스템을 1~2개 맡게되고 중요도가 낮은 시스템은 주니어들이 4~5개씩 맡는구조였다.
+하지만 이런 방식은 시스템 수가 늘어나거나 담당자가 변경될 때마다 인수인계와 구조 파악에 혼선이 생기고, 유지보수 품질도 들쭉날쭉해질 수밖에 없었다.  
+더 나아가 우리 팀원들에게 줄수 있는 가치가 부재했다.
 
 ## 조직이 근본적으로 변할수 있는 전략이 필요했다
 단기적인 문제 해결을 넘어서, 우리 조직이 장기적으로 경쟁력을 유지하고 지속적으로 성장하기 위해서는 
 **조직 문화와 업무 방식을 근본적으로 재정의하는 전략**을 세우고 이를 위한 전술을 세웠다.
 
-### 도메인 중심 조직 재편
+### 1. 도메인 중심 인원 편성 
 
-### 팀원들과의 공감대 형성
+### 2. 팀원들과의 공감대 형성
 
-### 힘있는 조직을 만들기
+### 3. 힘있는 조직을 만들기
+
+### 4. 기타
+
+다음 글에서는 해당전술을 구체적으로 어떻게 사용하였는지 작성해보려 한다.
