--- a/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
+++ b/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
@@ -1,10 +1,13 @@
 ---
 layout: single
-title: 👥팀관리 - 전술적으로 정의되지 않은 팀을 다시 세우기
+title: 👥 팀관리 - 전술적으로 정의되지 않은 팀을 도메인 중심 인원 편성으로 다시 세우기
 categories: team
 tag: [TEAM]
 toc: true
 ---
+
+> 팀 블로그용 원고  
+> [이전 : 팀관리 전략적조직변화](../팀관리_전략적조직변화)
 
 ## 업무 기준이 아닌, 도메인 중심으로 재정의
 먼저 팀 내 전체 시스템을 영업, 물류, 인사, 지원 등 주요 업무 도메인 기준으로 분류했다.
@@ -37,27 +40,31 @@ toc: true
 
 ### to-be 인원 배분
 - **영업 도메인**: 정) 직원 A, 부) 필자
-- **물류 도메인**: 정) 직원 B
-- **인사 도메인**: 정) 직원 C, 필자, 부) 직원 C
+- **물류 도메인**: 정) 직원 D, 직원 B
+- **인사 도메인**: 정) 직원 A, 필자, 부) 직원 C
 - **지원 도메인**: 정) 필자, 부) 공용 업무
 
 
-이러한 재배치는 단순히 주요 도메인에 2인 이상을 배치하는 것이 아니라,  
-전문화된 도메인별 인력 운용과 선택 및 집중을 가능하게 하는 구조로의 전환을 의미한다.  
+이러한 재배치는 단순히 주요 도메인에 2인 이상을 배치하는 것이 아니라, 전문화된 도메인별 인력 운용과 선택 및 집중을 가능하게 하는 구조로의 전환을 의미한다.  
 이전에는 기타 시스템들이 제대로 정리되지 않은 채 주니어 개발자들에게 무분별하게 할당되어, 성장 가능성을 저해하는 악순환이 있었다.  
 이를 끊기 위해 나는 내가 해야 할 일과 하지 말아야 할 일을 명확히 구분하고, 팀원들이 각자의 전문 분야에 집중할 수 있는 구조를 마련했다.
+> 도메인이 아닌 기술적인 성장방향을 제시한 것은 어느정도 자리가 잡히고 난 이후 이다.
 
+## 도메인 주도 개발
+현재 조직은 정의하자면 백엔드 개발자만 존재하는 조직이다. 그럼에도 운영, 개선, 개발하기위해선 도메인에 대한 이해도가 높아야 되고 어떠한 방법이 필요했다. 
+
+그래서 우리파트는 도메인 주도 개발을 주 방법론 삼아 공통학습 과제로 제시하고 기존 도메인에 대한 분석과 학습을 이어갔다. 필요하다면 현업 담당자들과의 만남을 통해 지식과 빈공간을 채워나갔다.
+
+> 도메인에 대한 이해도가 높아지고 유비쿼터스랭귀지가 몸에 익을때쯤 DDD의 전략적 설계에 따른 개발 목표를 수립하였다. 이것은 나중에 다뤄 볼 것이다.
 
 ## 결론
 
-결국, 문제의 본질은 단순히 업무량이나 기술 부채가 아니라,  
-**팀의 정의와 업무 구조가 제대로 수립되지 않아 혼란이 지속된다는 것**이었다.  
-이번 리빌딩은 팀을 구성하는 개별 시스템이 아니라,  
-**업무 도메인 중심의 체계적 조직 재정의**를 통해 문제를 해결하고자 한 시도이다.
+결국, 문제의 본질은 단순히 업무량이나 기술 부채가 아니라, **팀의 정의와 업무 구조가 제대로 수립되지 않아 혼란이 지속된다는 것**이었다.  
+이번 리빌딩은 팀을 구성하는 개별 시스템이 아니라, **업무 도메인 중심의 체계적 조직 재정의**를 통해 문제를 해결하고자 한 시도이다.
 
 큰 변화는 아니었고 주어진 리소스내에서의 변화였으나 효과는 생각보다 강력했다. 이탈자들이 공백을 채우지 않아도 이전 시스템이 잘 유지되었고 더 나아가 더 많은 것들을 개발 할 수 있게 되었다.  
 기존 주니어 개발자분들은 집중할 수 있게된 환경을 마음에 들어하며 많은것들을 증명해주기 시작했다.
 
-실제로 인건비만 1.7억이 줄었고 대표님에게 이전보다 더 잘 팀이 운영되고 있다며 성과를 인정받으며 좋은 평가를 받았고 인사권을 받을 수 있었다.
+실제로 인건비만 `1.7억`이 줄었고 대표님에게 이전보다 더 잘 팀이 운영되고 있다며 성과를 인정받으며 좋은 평가를 받았고 인사권을 받을 수 있었다.
 
-> 팀리빌딩중 팀장님이 새로 부임하였으나 몇달을 채우지 못하시고 퇴사하셨다. 업무외 다른 문제가 많은 조직이었다. 힘이 없어 외풍에 쉽게 흔들리는 팀이었다. 
+> 팀리빌딩중 팀장님이 새로 부임하였으나 몇달을 채우지 못하시고 퇴사하셨다. 업무외 다른 문제가 많은 조직이었다. 힘이 없어 외풍에 쉽게 흔들리는 팀이었다.
