--- a/_posts/team/2025-04-06-팀관리_전략적조직변화.md
+++ b/_posts/team/2025-04-06-팀관리_전략적조직변화.md
@@ -17,8 +17,6 @@ toc: true
 
 단순히 '문제가 많은 팀'이라기보다는, **팀의 정의 자체가 잘못되어 있던 구조**였다.
 
----
-
 ## 팀 구성과 현실
 
 당시 팀은 아래와 같이 구성되어 있었다:
@@ -32,8 +30,6 @@ toc: true
 
 > RPA에 대한 이야기는 따로 다뤄보려 한다.
 
----
-
 ## 본질적인 문제: 솔루션 운영 파트
 
 진짜 문제가 있었던 곳은 솔루션 운영 파트였다. [서막](../팀관리_서막)에서 언급했듯, **아무도 쳐다보지 않는 숲과도 같은 파트**였지만, 아이러니하게도 그룹사 내에서 가장 핵심적인 시스템들이 여기에 몰려 있었다.
@@ -44,8 +40,6 @@ toc: true
 - 그룹사 물류의 핵심인 WMS
 - 그룹사 전체 인사시스템
 - 그리고 20개가 넘는 기타 내부 시스템(회계, 보안, ITSM 등등)
-
----
 
 ## 문제는 일보다 “형태 없는 업무 구조”였다
 
@@ -62,8 +56,6 @@ toc: true
 
 그런 일이 반복되다 보니 팀의 존재 목적도 애매해졌고, 일의 시작과 끝이 모호한 상태가 되어갔다.
 
-
----
 
 ## 그래서, 나는 어디서부터든 정의를 다시 세워야 했다
 
@@ -90,7 +82,7 @@ toc: true
 
 ### 2. 팀원들과의 공감대 형성
 
-### 3. 힘있는 조직을 만들기
+### 3. 힘있는 조직 만들기
 
 ### 4. 기타
 
