--- a/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
+++ b/_posts/team/2025-04-07-팀관리_전술적으로정의되지않은팀다시세우기.md
@@ -10,7 +10,7 @@ toc: true
 > [이전 : 팀관리 전략적조직변화](../팀관리_전략적조직변화)
 
 ## 업무 기준이 아닌, 도메인 중심으로 재정의
-먼저 팀 내 전체 시스템을 영업, 물류, 인사, 지원 등 주요 업무 도메인 기준으로 분류했다.
+먼저 팀 내 전체 시스템을 도메인 위주로 영역을 나누어 영업, 물류, 인사, 지원 등 주요 업무 도메인 기준으로 분류했다.
 기존에는 각 개발자가 각자 다른 시스템을 ‘작업 단위’로 끌어안고 있었다면, 이제는 업무 영역별로 역할과 책임(R&R)을 나누는 구조로 전환한 것이다.
 
 도메인마다 메인 담당과 서브 담당을 정해 정·부 체계를 만들고,
