--- a/_posts/team/2025-04-30-팀관리_팀원들과의공감대형성하기.md
+++ b/_posts/team/2025-04-30-팀관리_팀원들과의공감대형성하기.md
@@ -11,18 +11,15 @@ toc: true
 > [이전 : 팀관리 도메인중심인원편성](../팀관리_전술적으로정의되지않은팀다시세우기)
 
 ## 팀원들과 공감대를 형성하고 시스템 재분배하기
-시스템을 재분배하기에 앞서 팀원들의 성향과 현재 상태, 그리고 업무 중 겪고 있는 고충들을 충분히 살펴보았다. 이를 기반으로 팀원들에게 어떤 가치를 제공할 수 있을지 고민하며 개별 면담을 진행하였다.  
-당시에는 신규 개발이 어려운 상황이었기에, 우선 시스템 `운영` 업무를 명확히 정리하는 작업을 선행하였다.
+시스템을 재분배하기에 앞서 팀원들의 성향과 현재 상태, 그리고 업무 중 겪고 있는 고충들을 충분히 살펴보았다. 팀원들에게 어떤 가치를 줄 수 있을지 고민했고, 그 내용을 바탕으로 개별 면담을 진행했다.
 
-줄 수 있는 실질적인 보상이 많지 않은 상황이었기에, 시스템 운영을 통해 팀원들이 어떤 성장과 가치를 얻을 수 있는지를 중심으로 설득에 나섰다. 현재의 업무보다는 난이도가 높아지지만, 장기적으로 더 의미 있는 성장을 할 수 있다는 점을 강조했다.
+그 시점에는 신규 개발이 어려운 상황이었기에, 우선 시스템 운영 업무를 명확히 정리하는 작업부터 시작했다. 실질적으로 줄 수 있는 보상이 많지 않았던 터라, 시스템 운영을 통해 팀원들이 어떤 성장 기회를 얻을 수 있을지를 중심으로 대화를 이어갔다. 지금보다 일의 난이도는 올라가겠지만, 장기적으로 더 발전적인 방향이라는 점을 계속 설득했다.
 
-이 과정에서 당장은 '개발자'라는 정체성을 살리기 어려운 팀 상황을 솔직히 공유했고, 개발 역량을 더 키우고 싶은 분들께는 타 팀 이동을 권유했다.
+물론 모든 팀원이 이 방향에 동의하는 건 아니었다. 현재 상황에서는 ‘개발자’로서의 성장을 기대하기 어렵다고 판단되는 분들에겐 솔직하게 현실을 공유했고, 개발 경험을 더 쌓고 싶은 분들에겐 다른 팀으로의 이동을 권유하기도 했다.
 
-그 과정에서 `개발`이라고 불릴 만한 일을 할 수 있는건 조금 먼 얘기 였기에 개발을 하고 싶어 하는 분들은 다른 팀으로 이동을 권해드렸다.
+이 과정에서 인턴으로 입사하여 여러 시스템을 운영하던 직원 D가 타 팀으로 이동하게 되었고, 팀 인원은 5명에서 4명으로 줄었다.
 
-이 과정에서 '인턴으로 입사하여 여러 시스템을 운영하던 직원D'가 타 팀으로 이동이 되었고 인원은 5명에서 4명으로 줄게 되었다.
-
-정,부 체계로 개편하였기 검토자만 있다면 중요도가 높은 시스템과 도메인에 주니어를 배정하기도 했다. 대표적으로 10년차 이상이 운영을 하던 시스템을 검토와 업무적인 관리만 '정'이 하였고 주니어 개발자가 관리하여도 충분히 가능한 영역임을 증명하였다.
+남은 인원 체계는 정·부 체계로 개편했다. 중요도가 높은 시스템일수록 ‘정’이 검토를 맡고, 주니어가 실질적인 운영을 담당하도록 했다. 예를 들면, 기존에는 10년차 이상의 인력이 전담하던 시스템을 이제는 ‘정’이 검토와 일정 관리를 맡고, 주니어 개발자가 실무를 운영하는 식으로 역할을 나눴다. 실제로 이렇게 운영해보니 주니어도 충분히 해낼 수 있다는 걸 증명할 수 있었다.
 
 ### 인원 배분
 - **영업 도메인**: 정) 직원 A, 부) 필자
