--- a/_posts/automation/2024-02-06-RPA.md
+++ b/_posts/automation/2024-02-06-RPA.md
@@ -1,8 +1,8 @@
 ---
 layout: single
 title: 🤖RPA란?
-categories: RPA
-tag: [RPA]
+categories: automation
+tag: [automation, automation]
 toc: true
 ---
 
@@ -29,7 +29,7 @@ RPA의 사전적 정의는 로보틱 처리 자동화로 bot이 비즈니스 프
 
 환경적인 특성은 개발자가 "과제"를 서버(클라우드)에 올리게 되고 특정 조건에 따라 서버는 작업용 PC에 이벤트를 발송해 자동화를 수행한다.
 
-<img src="/images/rpa/img.png" alt="RPA 구조">
+<img src="/images/automation/img.png" alt="RPA 구조">
 
 ## 2.RPA의 오해
 RPA는 많은 과제들이 시스템 자동화를 위해 만들어 *“자동화”* 만 포커스를 맞추고 있다.
