--- a/_posts/automation/2024-02-14-RPA_과제분류.md
+++ b/_posts/automation/2024-02-14-RPA_과제분류.md
@@ -1,8 +1,8 @@
 ---
 layout: single
 title: 🤖RPA 과제분류
-categories: RPA
-tag: [RPA]
+categories: automation
+tag: [automation, rpa]
 toc: true
 #author_profile: false
 #sidebar:
