--- a/_posts/systemdesign/2025-06-26-AI가_레거시시스템고도화에서기대만큼성능을내기어려운이유.md
+++ b/_posts/systemdesign/2025-06-26-AI가_레거시시스템고도화에서기대만큼성능을내기어려운이유.md
@@ -287,7 +287,7 @@ markdownlint _posts/{카테고리}/{파일명}.md
 ### **디렉토리 구조 검증**
 ```bash
 # 카테고리 디렉토리 존재 확인
-for category in cloud code devops diary framework info manage pm rpa scdf sm systemdesign team WebApplication; do
+for category in cloud code devops diary framework info manage pm automation scdf sm systemdesign team WebApplication; do
   if [ ! -d "_posts/$category" ]; then
     echo "Warning: $_posts/$category directory does not exist"
     mkdir -p "_posts/$category"
